--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="logo">FoodieDash</h1>
+        <h1 class="logo">DormDash</h1>
         <nav class="nav">
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">Orders</a>
@@ -20,22 +20,35 @@
             <h2>Popular Restaurants</h2>
             <div class="restaurants-list">
                 <div class="restaurant-card">
-                    <h3>Pizza Palace</h3>
-                    <p>Delicious pizzas at your doorstep!</p>
+                    <h3>Chronic Tacos</h3>
                 </div>
                 <div class="restaurant-card">
-                    <h3>Burger Haven</h3>
-                    <p>Juicy burgers with fresh ingredients.</p>
+                    <h3>Hibachi-San</h3>
                 </div>
                 <div class="restaurant-card">
-                    <h3>Sushi World</h3>
-                    <p>Fresh sushi rolls made to order.</p>
+                    <h3>Panda Express</h3>
                 </div>
+                <div class="restaurant-card">
+                    <h3>The Coffee Bean & Tea Leaf</h3>
+                </div>
+                <div class="restaurant-card">
+                    <h3>The Habit Burger and Grill/h3>
+                </div>
+                <div class="restaurant-card">
+                    <h3>Subway</h3>
+                </div>
+                <div class="restaurant-card">
+                    <h3>The Barn</h3>
+                </div>
+                <div class="restaurant-card">
+                    <h3>The Halal Shack</h3>
+                </div>
+                
             </div>
         </section>
     </main>
     <footer class="footer">
-        <p>&copy; 2024 FoodieDash. All Rights Reserved.</p>
+        <p>&copy; 2024 DormDash. All Rights Reserved.</p>
     </footer>
     <script src="app.js"></script>
 </body>
