--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h3>The Coffee Bean & Tea Leaf</h3>
                 </div>
                 <div class="restaurant-card">
-                    <h3>The Habit Burger and Grill/h3>
+                    <h3>The Habit Burger and Grill</h3>
                 </div>
                 <div class="restaurant-card">
                     <h3>Subway</h3>
