--- a/index.html
+++ b/index.html
@@ -18,32 +18,19 @@
     <main class="main-content">
         <section class="restaurants-section">
             <h2>Popular Restaurants</h2>
-            <div class="restaurants-list">
-                <div class="restaurant-card">
-                    <h3>Chronic Tacos</h3>
+            <div class="carousel-container">
+                <button class="carousel-btn prev-btn">&#8249;</button>
+                <div class="restaurants-list">
+                    <div class="restaurant-card">Chronic Tacos</div>
+                    <div class="restaurant-card">Hibachi-San</div>
+                    <div class="restaurant-card">Panda Express</div>
+                    <div class="restaurant-card">The Coffee Bean & Tea Leaf</div>
+                    <div class="restaurant-card">The Habit Burger and Grill</div>
+                    <div class="restaurant-card">Subway</div>
+                    <div class="restaurant-card">The Barn</div>
+                    <div class="restaurant-card">The Halal Shack</div>
                 </div>
-                <div class="restaurant-card">
-                    <h3>Hibachi-San</h3>
-                </div>
-                <div class="restaurant-card">
-                    <h3>Panda Express</h3>
-                </div>
-                <div class="restaurant-card">
-                    <h3>The Coffee Bean & Tea Leaf</h3>
-                </div>
-                <div class="restaurant-card">
-                    <h3>The Habit Burger and Grill</h3>
-                </div>
-                <div class="restaurant-card">
-                    <h3>Subway</h3>
-                </div>
-                <div class="restaurant-card">
-                    <h3>The Barn</h3>
-                </div>
-                <div class="restaurant-card">
-                    <h3>The Halal Shack</h3>
-                </div>
-                
+                <button class="carousel-btn next-btn">&#8250;</button>
             </div>
         </section>
     </main>
