--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="header">
+        <img src="images/icon_logo.png" alt="DormDash Logo" class="logo-img">
         <h1 class="logo">DormDash</h1>
         <nav class="nav">
             <a href="#" class="nav-link">Home</a>
