--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 <div class="restaurant-card">
                     <h3>The Halal Shack</h3>
                 </div>
+                <div class="restaurant-card">
+                    <h3>Noods @ The Market</h3>
+                </div>
+                <div class="restaurant-card">
+                    <h3>Starbucks @ The Market</h3>
+                </div>
                 
             </div>
         </section>
