--- a/index.html
+++ b/index.html
@@ -45,10 +45,16 @@
                     <h3>The Halal Shack</h3>
                 </div>
                 <div class="restaurant-card">
-                    <h3>Noods @ The Market</h3>
+                    <h3>Noods @ The Market at Glen Mor</h3>
                 </div>
                 <div class="restaurant-card">
-                    <h3>Starbucks @ The Market</h3>
+                    <h3>Starbucks @ The Market at Glen Mor</h3>
+                </div>
+                <div class="restaurant-card">
+                    <h3>Lollicup @ The Market at North District</h3>
+                </div>
+                <div class="restaurant-card">
+                    <h3>Street Eats @ The Market at North District</h3>
                 </div>
                 
             </div>
