add chronic tacos

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
             <a href="#" class="nav-link">Profile</a>
         </nav>
     </header>
+
     <main class="main-content">
         <section class="restaurants-section">
             <h2>Popular Restaurants</h2>
             <div class="restaurants-list">
-                <div class="restaurant-card">
+                <!-- Link to the new menu page for Chronic Tacos -->
+                <a href="menu/menu_chronic_tacos.html" class="restaurant-card">
                     <h3>Chronic Tacos</h3>
-                </div>
+                </a>
+
+                <!-- Other restaurant cards -->
                 <div class="restaurant-card">
                     <h3>Hibachi-San</h3>
                 </div>
@@ -56,13 +60,14 @@
                 <div class="restaurant-card">
                     <h3>Street Eats @ The Market at North District</h3>
                 </div>
-                
             </div>
         </section>
     </main>
+
     <footer class="footer">
         <p>&copy; 2024 DormDash. All Rights Reserved.</p>
     </footer>
+    
     <script src="app.js"></script>
 </body>
 </html>
