add chronic tacos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Popular Restaurants</h2>
             <div class="restaurants-list">
                 <!-- Link to the new menu page for Chronic Tacos -->
-                <a href="menu/menu_chronic_tacos.html" class="restaurant-card">
+                <a href="menus/menu_chronic_tacos.html" class="restaurant-card">
                     <h3>Chronic Tacos</h3>
                 </a>
 
