add chronic tacos

--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -11,7 +11,7 @@
         <img src="../images/icon_logo.png" alt="DormDash Logo" class="logo-img">
         <h1 class="logo">DormDash</h1>
         <nav class="nav">
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="../index.html" class="nav-link">Home</a>
             <a href="#" class="nav-link">Orders</a>
             <a href="#" class="nav-link">Profile</a>
         </nav>
@@ -55,7 +55,7 @@
     <footer class="footer">
         <p>&copy; 2024 DormDash. All Rights Reserved.</p>
     </footer>
-    
+
     <script src="app.js"></script>
 </body>
 </html>
