--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -21,32 +21,119 @@
         <section class="menu-section">
             <h2>Chronic Tacos Menu</h2>
 
+            <!-- Pick a Base -->
+            <div class="menu-category">
+                <h3>1. Pick a Base</h3>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <strong>Taco Plate</strong>
+                        <p class="description">Includes 2 tacos with side of rice & beans</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Burrito</strong>
+                        <p class="description">Choice of protein, rice, beans & toppings</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Bowl-rito</strong>
+                        <p class="description">Choice of protein, rice, beans & toppings</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Quesadilla</strong>
+                        <p class="description">Includes chips & salsa</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Small Burrito</strong>
+                        <p class="description">Choice of protein, rice, beans & toppings (Add steak 1.00)</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Pick a Protein -->
+            <div class="menu-category">
+                <h3>2. Pick a Protein</h3>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <strong>Carne Asada</strong>
+                        <p class="description">Marinated, grilled steak</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Pollo Asada</strong>
+                        <p class="description">Marinated, grilled chicken</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Halal Chicken</strong>
+                        <p class="description">Grilled chicken</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Carnitas</strong>
+                        <p class="description">Authentic, slow-cooked pork</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Vegetarian</strong>
+                        <p class="description">Includes guac & fajita veggies upon request</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Pick a Style -->
+            <div class="menu-category">
+                <h3>3. Pick a Style</h3>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <strong>Street Style</strong>
+                        <p class="description">Lime, onions, cilantro & salsa</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Gringo Style</strong>
+                        <p class="description">Lime, lettuce, cheese & salsa</p>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Baja Style</strong>
+                        <p class="description">Lime, cabbage, cheese, pico de gallo & baja sauce</p>
+                    </div>
+                </div>
+            </div>
+
             <!-- Combo Upgrade Section -->
             <div class="menu-category">
-                <h3>Combo Upgrade</h3>
+                <h3>4. Combo Upgrade</h3>
                 <div class="menu-items">
-                    <div class="menu-item">Upgrade to Combo 1</div>
-                    <div class="menu-item">Upgrade to Combo 2</div>
+                    <div class="menu-item">
+                        <strong>Add Chips, Salsa, & Drink</strong>
+                        <p class="description">Upgrade your meal with chips, salsa, and a drink for just $3.50 extra</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Extras Section -->
             <div class="menu-category">
-                <h3>Extras</h3>
+                <h3>5. Extras</h3>
                 <div class="menu-items">
-                    <div class="menu-item">Add Extra Meat</div>
-                    <div class="menu-item">Add Extra Guacamole</div>
-                    <div class="menu-item">Add Extra Cheese</div>
+                    <div class="menu-item">
+                        <strong>Fajita Veggies</strong>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Guacamole</strong>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Chips & Salsa</strong>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Chips & Guacamole</strong>
+                    </div>
                 </div>
             </div>
 
             <!-- Drinks Section -->
             <div class="menu-category">
-                <h3>Drinks</h3>
+                <h3>6. Drinks</h3>
                 <div class="menu-items">
-                    <div class="menu-item">Soda</div>
-                    <div class="menu-item">Lemonade</div>
-                    <div class="menu-item">Iced Tea</div>
+                    <div class="menu-item">
+                        <strong>Regular Drink</strong>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Specialty Drink</strong>
+                    </div>
                 </div>
             </div>
         </section>
