add chronic tacos

--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -26,23 +26,28 @@
                 <h3>1. Pick a Base</h3>
                 <div class="menu-items">
                     <div class="menu-item">
-                        <span class="item-name">Taco Plate (500-1260)</span>
+                        <strong>Taco Plate</strong>
+                        <p class="description">Includes 2 tacos with side of rice & beans</p>
                         <span class="price">$9.95</span>
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Burrito (630-1260)</span>
+                        <strong>Burrito</strong>
+                        <p class="description">Choice of protein, rice, beans & toppings</p>
                         <span class="price">$9.95</span>
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Bowl-rito (380-960)</span>
+                        <strong>Bowl-rito</strong>
+                        <p class="description">Choice of protein, rice, beans & toppings</p>
                         <span class="price">$9.95</span>
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Quesadilla (730-1320)</span>
+                        <strong>Quesadilla</strong>
+                        <p class="description">Includes chips & salsa</p>
                         <span class="price">$10.50</span>
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Small Burrito (300-640)</span>
+                        <strong>Small Burrito</strong>
+                        <p class="description">Choice of protein, rice, beans & toppings (Add steak 1.00)</p>
                         <span class="price">$7.50</span>
                     </div>
                 </div>
@@ -53,24 +58,29 @@
                 <h3>2. Pick a Protein</h3>
                 <div class="menu-items">
                     <div class="menu-item">
-                        <span class="item-name">Carne Asada</span>
-                        <span class="price">$0.00</span>
+                        <strong>Carne Asada</strong>
+                        <p class="description">Marinated, grilled steak</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Pollo Asada</span>
-                        <span class="price">$0.00</span>
+                        <strong>Pollo Asada</strong>
+                        <p class="description">Marinated, grilled chicken</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Carnitas</span>
-                        <span class="price">$0.00</span>
+                        <strong>Halal Chicken</strong>
+                        <p class="description">Grilled chicken</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Vegetarian</span>
-                        <span class="price">$0.00</span>
+                        <strong>Carnitas</strong>
+                        <p class="description">Authentic, slow-cooked pork</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Add Guac & Fajita Veggies</span>
-                        <span class="price">$1.00</span>
+                        <strong>Vegetarian</strong>
+                        <p class="description">Includes guac & fajita veggies upon request</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                 </div>
             </div>
@@ -80,16 +90,19 @@
                 <h3>3. Pick a Style</h3>
                 <div class="menu-items">
                     <div class="menu-item">
-                        <span class="item-name">Street Style</span>
-                        <span class="price">$0.00</span>
+                        <strong>Street Style</strong>
+                        <p class="description">Lime, onions, cilantro & salsa</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Gringo Style</span>
-                        <span class="price">$0.00</span>
+                        <strong>Gringo Style</strong>
+                        <p class="description">Lime, lettuce, cheese & salsa</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Baja Style</span>
-                        <span class="price">$0.00</span>
+                        <strong>Baja Style</strong>
+                        <p class="description">Lime, cabbage, cheese, pico de gallo & baja sauce</p>
+                        <!-- Price is 0, so it will not be shown -->
                     </div>
                 </div>
             </div>
@@ -99,7 +112,8 @@
                 <h3>4. Combo Upgrade</h3>
                 <div class="menu-items">
                     <div class="menu-item">
-                        <span class="item-name">Add Chips, Salsa & Drink</span>
+                        <strong>Add Chips, Salsa, & Drink</strong>
+                        <p class="description">Upgrade your meal with chips, salsa, and a drink for just $3.50 extra</p>
                         <span class="price">$3.50</span>
                     </div>
                 </div>
@@ -110,23 +124,19 @@
                 <h3>5. Extras</h3>
                 <div class="menu-items">
                     <div class="menu-item">
-                        <span class="item-name">Chips & Salsa</span>
-                        <span class="price">$2.25</span>
-                    </div>
-                    <div class="menu-item">
-                        <span class="item-name">Chips & Guacamole</span>
-                        <span class="price">$3.75</span>
-                    </div>
-                    <div class="menu-item">
-                        <span class="item-name">Fajita Veggies</span>
+                        <strong>Fajita Veggies</strong>
                         <span class="price">$1.00</span>
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Guacamole</span>
+                        <strong>Guacamole</strong>
                         <span class="price">$2.25</span>
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Churro Bites</span>
+                        <strong>Chips & Salsa</strong>
+                        <span class="price">$2.25</span>
+                    </div>
+                    <div class="menu-item">
+                        <strong>Chips & Guacamole</strong>
                         <span class="price">$3.75</span>
                     </div>
                 </div>
@@ -137,11 +147,11 @@
                 <h3>6. Drinks</h3>
                 <div class="menu-items">
                     <div class="menu-item">
-                        <span class="item-name">Regular Drink</span>
+                        <strong>Regular Drink</strong>
                         <span class="price">$2.75</span>
                     </div>
                     <div class="menu-item">
-                        <span class="item-name">Specialty Drink</span>
+                        <strong>Specialty Drink</strong>
                         <span class="price">$3.00</span>
                     </div>
                 </div>
