add chronic tacos

--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -60,7 +60,7 @@
                     <div class="menu-item">
                         <strong>Carne Asada</strong>
                         <p class="description">Marinated, grilled steak</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price">$1.00</span>
                     </div>
                     <div class="menu-item">
                         <strong>Pollo Asada</strong>
@@ -70,7 +70,7 @@
                     <div class="menu-item">
                         <strong>Halal Chicken</strong>
                         <p class="description">Grilled chicken</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price">$1.00</span>
                     </div>
                     <div class="menu-item">
                         <strong>Carnitas</strong>
