add chronic tacos

--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -65,7 +65,7 @@
                     <div class="menu-item">
                         <strong>Pollo Asada</strong>
                         <p class="description">Marinated, grilled chicken</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price">$No additional cost</span>
                     </div>
                     <div class="menu-item">
                         <strong>Halal Chicken</strong>
@@ -75,12 +75,12 @@
                     <div class="menu-item">
                         <strong>Carnitas</strong>
                         <p class="description">Authentic, slow-cooked pork</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price">$No additional cost</span>
                     </div>
                     <div class="menu-item">
                         <strong>Vegetarian</strong>
                         <p class="description">Includes guac & fajita veggies upon request</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price">$No additional cost</span>
                     </div>
                 </div>
             </div>
@@ -92,17 +92,17 @@
                     <div class="menu-item">
                         <strong>Street Style</strong>
                         <p class="description">Lime, onions, cilantro & salsa</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price"></span>
                     </div>
                     <div class="menu-item">
                         <strong>Gringo Style</strong>
                         <p class="description">Lime, lettuce, cheese & salsa</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price"></span>
                     </div>
                     <div class="menu-item">
                         <strong>Baja Style</strong>
                         <p class="description">Lime, cabbage, cheese, pico de gallo & baja sauce</p>
-                        <!-- Price is 0, so it will not be shown -->
+                        <span class="price"></span>
                     </div>
                 </div>
             </div>
