--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -65,7 +65,7 @@
                     <div class="menu-item">
                         <strong>Pollo Asada</strong>
                         <p class="description">Marinated, grilled chicken</p>
-                        <span class="price">$No additional cost</span>
+                        <span class="price">No additional cost</span>
                     </div>
                     <div class="menu-item">
                         <strong>Halal Chicken</strong>
@@ -75,12 +75,12 @@
                     <div class="menu-item">
                         <strong>Carnitas</strong>
                         <p class="description">Authentic, slow-cooked pork</p>
-                        <span class="price">$No additional cost</span>
+                        <span class="price">No additional cost</span>
                     </div>
                     <div class="menu-item">
                         <strong>Vegetarian</strong>
                         <p class="description">Includes guac & fajita veggies upon request</p>
-                        <span class="price">$No additional cost</span>
+                        <span class="price"$No additional cost</span>
                     </div>
                 </div>
             </div>
