--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <h1 class="logo">DormDash</h1>
         <nav class="nav">
             <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Orders</a>
-            <a href="#" class="nav-link">Profile</a>
+            <a href="./cart.html" class="nav-link">Cart</a>
+            <a href="./orders.html" class="nav-link">Orders</a>
+            <a href="./profile.html" class="nav-link">Profile</a>
         </nav>
     </header>
 
