--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -12,8 +12,9 @@
         <h1 class="logo">DormDash</h1>
         <nav class="nav">
             <a href="../index.html" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Orders</a>
-            <a href="#" class="nav-link">Profile</a>
+            <a href="../cart.html" class="nav-link">Cart</a>
+            <a href="../orders.html" class="nav-link">Orders</a>
+            <a href="../profile.html" class="nav-link">Profile</a>
         </nav>
     </header>
 
@@ -157,12 +158,18 @@
                 </div>
             </div>
         </section>
+        <section>
+            <!-- Add to Cart Section -->
+            <div class="add-to-cart-section">
+                <h3>Add to Cart</h3>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
         <p>&copy; 2024 DormDash. All Rights Reserved.</p>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
