--- a/profile.html
+++ b/profile.html
@@ -21,6 +21,20 @@
     <main class="main-content">
         <section class="profile-section">
             <h2>Profile</h2>
+            <div class="profile-container">
+                <div class="profile-header">
+                    <img src="images/bob.jpg" alt="Profile Picture" class="profile-image">
+                    <div class="profile-info">
+                        <h1>Bob</h1>
+                        <p><i>Member since December 2024</i></p>
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <h2>Top Restaurants</h2>
+                    <p><i>The Barn</i></p>
+                    <p><i>Chronic Tacos</i></p>
+                </div>
+            </div>
         </section>
     </main>
 
