adding hibachi san

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
                     <h3>Chronic Tacos</h3>
                 </a>
 
-                <!-- Other restaurant cards -->
-                <div class="restaurant-card">
+                <!-- Link to the new menu page for Hibachi San -->
+                <a href="menus/menu_hibachi_san.html" class="restaurant-card">
                     <h3>Hibachi-San</h3>
                 </div>
+                <!-- Other restaurant cards -->
                 <div class="restaurant-card">
                     <h3>Panda Express</h3>
                 </div>
