--- a/cart.html
+++ b/cart.html
@@ -36,11 +36,13 @@
                     </div>
                 </div>
         </section>
-        <section>
-            <!-- Confirm Order -->
-            <div class="confirm-order">
-                <h3>Confirm Order</h3>
-            </div>
+        <!-- Confirm Order Section -->
+        <section class="confirm-order-section">
+            <a href="./orders.html">
+                <div class="confirm-order">
+                    <h3>Confirm Order</h3>
+                </div>
+            </a>
         </section>
     </main>
 
