--- a/menus/menu_chronic_tacos.html
+++ b/menus/menu_chronic_tacos.html
@@ -158,11 +158,13 @@
                 </div>
             </div>
         </section>
-        <section>
-            <!-- Add to Cart Section -->
-            <div class="add-to-cart-section">
-                <h3>Add to Cart</h3>
-            </div>
+        <!-- Add to Cart Section -->
+        <section class="add-to-cart-section">
+            <a href="../cart.html">
+                <div class="add-to-cart-button">
+                    <h3>Add to Cart</h3>
+                </div>
+            </a>
         </section>
     </main>
 
