--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
         <img src="images/icon_logo.png" alt="DormDash Logo" class="logo-img">
         <h1 class="logo">DormDash</h1>
         <nav class="nav">
-            <a href="#" class="nav-link">Home</a>
+            <a href="./index.html" class="nav-link">Home</a>
             <a href="./cart.html" class="nav-link">Cart</a>
             <a href="./orders.html" class="nav-link">Orders</a>
             <a href="./profile.html" class="nav-link">Profile</a>
@@ -31,8 +31,8 @@
                 </div>
                 <div class="additional-info">
                     <h2>Top Restaurants</h2>
-                    <p><i>The Barn</i></p>
-                    <p><i>Chronic Tacos</i></p>
+                    <p>The Barn</p>
+                    <p>Chronic Tacos</p>
                 </div>
             </div>
         </section>
