adding hibachi san

--- a/index.html
+++ b/index.html
@@ -22,45 +22,45 @@
         <section class="restaurants-section">
             <h2>Popular Restaurants</h2>
             <div class="restaurants-list">
-                <!-- Link to the new menu page for Chronic Tacos -->
-                <a href="menus/menu_chronic_tacos.html" class="restaurant-card">
+                <!-- Chronic Tacos -->
+                <a href="menus/menu_chronic_tacos.html" class="restaurant-card" aria-label="View menu for Chronic Tacos">
                     <h3>Chronic Tacos</h3>
                 </a>
-
-                <!-- Link to the new menu page for Hibachi San -->
-                <a href="menus/menu_hibachi_san.html" class="restaurant-card">
+                <!-- Hibachi-San -->
+                <a href="menus/menu_hibachi_san.html" class="restaurant-card" aria-label="View menu for Hibachi-San">
                     <h3>Hibachi-San</h3>
                 </a>
-                <!-- Other restaurant cards -->
-                <a href="#" class="restaurant-card">
+                <!-- Other Restaurants -->
+                <a href="#" class="restaurant-card" aria-label="View menu for Panda Express">
                     <h3>Panda Express</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for The Coffee Bean & Tea Leaf">
                     <h3>The Coffee Bean & Tea Leaf</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for The Habit Burger and Grill">
                     <h3>The Habit Burger and Grill</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for Subway">
                     <h3>Subway</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for The Barn">
                     <h3>The Barn</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for The Halal Shack">
                     <h3>The Halal Shack</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for Noods @ The Market at Glen Mor">
                     <h3>Noods @ The Market at Glen Mor</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for Starbucks @ The Market at Glen Mor">
                     <h3>Starbucks @ The Market at Glen Mor</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for Lollicup @ The Market at North District">
                     <h3>Lollicup @ The Market at North District</h3>
                 </a>
-                <a href="#" class="restaurant-card">
+                <a href="#" class="restaurant-card" aria-label="View menu for Street Eats @ The Market at North District">
                     <h3>Street Eats @ The Market at North District</h3>
+                </a>
                 </a>
             </div>
         </section>
