--- a/index.html
+++ b/index.html
@@ -30,38 +30,38 @@
                 <!-- Link to the new menu page for Hibachi San -->
                 <a href="menus/menu_hibachi_san.html" class="restaurant-card">
                     <h3>Hibachi-San</h3>
-                </div>
+                </a>
                 <!-- Other restaurant cards -->
-                <div class="restaurant-card">
+                <a href="#" class="restaurant-card">
                     <h3>Panda Express</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>The Coffee Bean & Tea Leaf</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>The Habit Burger and Grill</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>Subway</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>The Barn</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>The Halal Shack</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>Noods @ The Market at Glen Mor</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>Starbucks @ The Market at Glen Mor</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>Lollicup @ The Market at North District</h3>
-                </div>
-                <div class="restaurant-card">
+                </a>
+                <a href="#" class="restaurant-card">
                     <h3>Street Eats @ The Market at North District</h3>
-                </div>
+                </a>
             </div>
         </section>
     </main>
